@@ -20,42 +20,31 @@
  */
 package org.candlepin.subscriptions.tally.filler;
 
-import static org.candlepin.subscriptions.tally.filler.Assertions.assertSnapshot;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.time.OffsetDateTime;
-import java.util.Arrays;
 import java.util.List;
-import org.candlepin.clock.ApplicationClock;
 import org.candlepin.subscriptions.db.model.Granularity;
-import org.candlepin.subscriptions.test.TestClockConfiguration;
-import org.candlepin.subscriptions.utilization.api.model.TallyReport;
-import org.candlepin.subscriptions.utilization.api.model.TallySnapshot;
 import org.junit.jupiter.api.Test;
 
-class YearlyReportFillerTest {
+class YearlyReportFillerTest extends BaseReportFillerTest {
 
-  private ApplicationClock clock;
-  private ReportFiller filler;
-
-  public YearlyReportFillerTest() {
-    clock = new TestClockConfiguration().adjustableClock();
-    filler = ReportFillerFactory.getInstance(clock, Granularity.YEARLY);
+  @Override
+  Granularity granularity() {
+    return Granularity.YEARLY;
   }
 
   @Test
   void noExistingSnapsShouldFillWithYearlyGranularity() {
     OffsetDateTime start = clock.startOfCurrentYear();
     OffsetDateTime end = start.plusYears(3);
-    TallyReport report = new TallyReport();
-    report.setData(filler.fillGaps(report.getData(), start, end, false));
 
-    List<TallySnapshot> filled = report.getData();
+    var filled = whenFillGaps(List.of(), start, end);
     assertEquals(4, filled.size());
-    assertSnapshot(filled.get(0), start, 0, 0, 0, false);
-    assertSnapshot(filled.get(1), start.plusYears(1), null, null, null, false);
-    assertSnapshot(filled.get(2), start.plusYears(2), null, null, null, false);
-    assertSnapshot(filled.get(3), start.plusYears(3), null, null, null, false);
+    assertDataPointIsEmpty(filled.get(0), start);
+    assertDataPointIsEmpty(filled.get(1), start.plusYears(1));
+    assertDataPointIsEmpty(filled.get(2), start.plusYears(2));
+    assertDataPointIsEmpty(filled.get(3), start.plusYears(3));
   }
 
   @Test
@@ -67,15 +56,12 @@ class YearlyReportFillerTest {
     // Expected to start on the beginning of the year.
     OffsetDateTime expectedStart = clock.startOfYear(start);
 
-    TallyReport report = new TallyReport();
-    report.setData(filler.fillGaps(report.getData(), start, end, false));
-
-    List<TallySnapshot> filled = report.getData();
+    var filled = whenFillGaps(List.of(), start, end);
     assertEquals(4, filled.size());
-    assertSnapshot(filled.get(0), expectedStart, 0, 0, 0, false);
-    assertSnapshot(filled.get(1), expectedStart.plusYears(1), null, null, null, false);
-    assertSnapshot(filled.get(2), expectedStart.plusYears(2), null, null, null, false);
-    assertSnapshot(filled.get(3), expectedStart.plusYears(3), null, null, null, false);
+    assertDataPointIsEmpty(filled.get(0), expectedStart);
+    assertDataPointIsEmpty(filled.get(1), expectedStart.plusYears(1));
+    assertDataPointIsEmpty(filled.get(2), expectedStart.plusYears(2));
+    assertDataPointIsEmpty(filled.get(3), expectedStart.plusYears(3));
   }
 
   @Test
@@ -83,53 +69,29 @@ class YearlyReportFillerTest {
     OffsetDateTime start = clock.startOfCurrentYear();
     OffsetDateTime end = start.plusYears(3);
 
-    TallySnapshot snap1 = new TallySnapshot().cores(2).sockets(3).instanceCount(4).hasData(true);
-    TallySnapshot snap2 = new TallySnapshot().cores(5).sockets(6).instanceCount(7).hasData(true);
-    List<TallySnapshot> snaps = Arrays.asList(snap1, snap2);
+    var points = List.of(point(null, 2.0), point(null, 6.0));
+    var filled = whenFillGaps(points, start, end);
 
-    TallyReport report = new TallyReport().data(snaps);
-    report.setData(filler.fillGaps(report.getData(), start, end, false));
-
-    List<TallySnapshot> filled = report.getData();
     assertEquals(4, filled.size());
-    assertSnapshot(filled.get(0), start, 0, 0, 0, false);
-    assertSnapshot(filled.get(1), start.plusYears(1), null, null, null, false);
-    assertSnapshot(filled.get(2), start.plusYears(2), null, null, null, false);
-    assertSnapshot(filled.get(3), start.plusYears(3), null, null, null, false);
+    assertDataPointIsEmpty(filled.get(0), start);
+    assertDataPointIsEmpty(filled.get(1), start.plusYears(1));
+    assertDataPointIsEmpty(filled.get(2), start.plusYears(2));
+    assertDataPointIsEmpty(filled.get(3), start.plusYears(3));
   }
 
   @Test
   void shouldFillGapsBasedOnExistingSnapshotsForYearlyGranularity() {
     OffsetDateTime start = clock.startOfCurrentYear();
-    OffsetDateTime snap1Date = start.plusYears(1);
+    OffsetDateTime point1Date = start.plusYears(1);
     OffsetDateTime end = start.plusYears(3);
 
-    TallySnapshot snap1 =
-        new TallySnapshot().date(snap1Date).cores(2).sockets(3).instanceCount(4).hasData(true);
-    TallySnapshot snap2 =
-        new TallySnapshot().date(end).cores(5).sockets(6).instanceCount(7).hasData(true);
-    List<TallySnapshot> snaps = Arrays.asList(snap1, snap2);
+    var points = List.of(point(point1Date, 2.0), point(end, 6.0));
+    var filled = whenFillGaps(points, start, end);
 
-    TallyReport report = new TallyReport().data(snaps);
-    report.setData(filler.fillGaps(report.getData(), start, end, false));
-
-    List<TallySnapshot> filled = report.getData();
     assertEquals(4, filled.size());
-    assertSnapshot(filled.get(0), start, 0, 0, 0, false);
-    assertSnapshot(
-        filled.get(1),
-        snap1.getDate(),
-        snap1.getCores(),
-        snap1.getSockets(),
-        snap1.getInstanceCount(),
-        true);
-    assertSnapshot(filled.get(2), start.plusYears(2), null, null, null, false);
-    assertSnapshot(
-        filled.get(3),
-        snap2.getDate(),
-        snap2.getCores(),
-        snap2.getSockets(),
-        snap2.getInstanceCount(),
-        true);
+    assertDataPointIsEmpty(filled.get(0), start);
+    assertDataPoint(filled.get(1), start.plusYears(1), 2.0);
+    assertDataPointIsEmpty(filled.get(2), start.plusYears(2));
+    assertDataPoint(filled.get(3), start.plusYears(3), 6.0);
   }
 }
